chore: ts config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -113,5 +113,11 @@
         },
         "jsx": "react-jsx"
     },
-    "include": ["resources/js/**/*.ts", "resources/js/**/*.d.ts", "resources/js/**/*.tsx"]
+    "include": [
+        "resources/js/**/*.ts", 
+        "resources/js/**/*.d.ts", 
+        "resources/js/**/*.tsx",
+        "app/Modules/**/Interface/Views/**/*.ts",
+        "app/Modules/**/Interface/Views/**/*.tsx"
+    ]
 }
